--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </article>
         <article class="card">
           <img class="card_image" src="images/header-2.jpg">
-          <h4>Calculator</h4>
+          <h4>Cofee Kiosk</h4>
           <h5>Java</h5>
-          <p>This is an advanced calculator made with Java. This calculator can calculate basic math, interest rates, and much more!</p>
+          <p>This is an automated coffee kiosk I created using Java. The scenario was to create a kiosk that will replace an actual human taking a coffee order.</p>
         </article>
     </section>
   </div>
