--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <ul>
         <li><div class="logo"><p>dr</p></div></li>
         <li><h1>David Rosinski</h1><h5>Full Stack Web Developer</h5></li>
-        <li><a class="active" href="#"><img class="link_icons" src="/images/icons/home.png">Home</a></li>
+        <li><a class="active" href="#"><img class="link_icons" src="images/icons/home.png">Home</a></li>
         <li><a href="#"><img class="link_icons" src="images/icons/briefcase.png">Projects</a></li>
         <li><a href="#"><img class="link_icons" src="images/icons/user-shape.png">About</a></li>
-        <li class="rightlink"><a href="#"><img class="link_icons" src="Images/Icons/envelope.png">Contact</a></li>
+        <li class="rightlink"><a href="#"><img class="link_icons" src="images/icons/envelope.png">Contact</a></li>
       </ul>
     </nav>
   </header>
