--- a/contact.html
+++ b/contact.html
@@ -13,31 +13,27 @@
       <ul>
         <li><div class="logo"><p>dr</p></div></li>
         <li><h1>David Rosinski</h1><h5>Full Stack Web Developer</h5></li>
-        <li><a class="active" href="#"><img class="link_icons" src="Images/Icons/home.png">Home</a></li>
-        <li><a href="#"><img class="link_icons" src="Images/Icons/briefcase.png">Projects</a></li>
-        <li><a href="#"><img class="link_icons" src="Images/Icons/user-shape.png">About</a></li>
-        <li class="rightlink"><a href="#"><img class="link_icons" src="Images/Icons/envelope.png">Contact</a></li>
+        <li><a class="active" href="#"><img class="link_icons" src="Images/Icons/home.png" alt="Home">Home</a></li>
+        <li><a href="#"><img class="link_icons" src="Images/Icons/briefcase.png" alt="Projects">Projects</a></li>
+        <li><a href="#"><img class="link_icons" src="Images/Icons/user-shape.png" alt="About">About</a></li>
+        <li class="rightlink"><a href="#"><img class="link_icons" src="Images/Icons/envelope.png" alt="Contact">Contact</a></li>
       </ul>
     </nav>
   </header>
   <div class="content">
-    <section class="intro">
-      <h3>Introduction</h3>
-      <p>Hello, my name is David Rosinski and I am a developer with over 10 years of experience using many different programming languages. This website was designed and created by me. Feel free to give me feedback (positive or constructive)! I am currently expanding my education and employment opportunities by working through Udacity's Full Stack Development training program. If you are interested in getting in touch with me there is a contact link in the header and footer or click <a href="#">here</a>.</p>
-    </section>
-    <section class="featured">
-        <h3>Featured Projects</h3>
+    <section class="Contact_Methods">
+        <h3>Contact_Methods</h3>
         <article class="card">
-          <img class="card_image" src="images/movie-project.jpg">
-          <h4>Movie Project</h4>
-          <h5>Python</h5>
-          <p>This is a simple python script that, when run, will dynamically create a website displaying six movies. The website includes the trailer, a description, and the movie poster.</p>
+          <img class="card_image" src="images/movie-project.jpg" alt="Project Image">
+          <h4>Email</h4>
+          <h5>Email</h5>
+          <p>Info on emailing me.</p>
         </article>
         <article class="card">
-          <img class="card_image" src="images/header-2.jpg">
-          <h4>Calculator</h4>
-          <h5>Java</h5>
-          <p>This is an advanced calculator made with Java. This calculator can calculate basic math, interest rates, and much more!</p>
+          <img class="card_image" src="images/header-2.jpg" alt="Project Image">
+          <h4>LinkedIn</h4>
+          <h5>LinkedIn</h5>
+          <p>Info on contacting me via LinkedIn.</p>
         </article>
     </section>
   </div>
@@ -55,7 +51,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
-      <div class="copy">&copy copyright 2018 By David Rosinski</div>
+      <div class="copy">&copy; copyright 2018 By David Rosinski</div>
       <div class="credit">Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </div>
   </footer>
