--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <ul>
         <li><div class="logo"><p>dr</p></div></li>
         <li><h1>David Rosinski</h1><h5>Full Stack Web Developer</h5></li>
-        <li><a class="active" href="#"><img class="link_icons" src="images/icons/home.png">Home</a></li>
-        <li><a href="#"><img class="link_icons" src="images/icons/briefcase.png">Projects</a></li>
-        <li><a href="#"><img class="link_icons" src="images/icons/user-shape.png">About</a></li>
-        <li class="rightlink"><a href="#"><img class="link_icons" src="images/icons/envelope.png">Contact</a></li>
+        <li><a class="active" href="#"><img class="link_icons" src="images/icons/home.png" alt="Home">Home</a></li>
+        <li><a href="#"><img class="link_icons" src="images/icons/briefcase.png" alt="Projects">Projects</a></li>
+        <li><a href="#"><img class="link_icons" src="images/icons/user-shape.png" alt="About">About</a></li>
+        <li class="rightlink"><a href="#"><img class="link_icons" src="images/icons/envelope.png" alt="Contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -28,13 +28,13 @@
     <section class="featured">
         <h3>Featured Projects</h3>
         <article class="card">
-          <img class="card_image" src="images/movie-project.jpg">
+          <img class="card_image" src="images/movie-project.jpg" alt="Project Image">
           <h4>Movie Project</h4>
           <h5>Python</h5>
           <p>This is a simple python script that, when run, will dynamically create a website displaying six movies. The website includes the trailer, a description, and the movie poster.</p>
         </article>
         <article class="card">
-          <img class="card_image" src="images/header-2.jpg">
+          <img class="card_image" src="images/header-2.jpg" alt="Project Image">
           <h4>Cofee Kiosk</h4>
           <h5>Java</h5>
           <p>This is an automated coffee kiosk I created using Java. The scenario was to create a kiosk that will replace an actual human taking a coffee order.</p>
