--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   </div>
   <footer>
     <div class="Right_footer_container">
-      <a href="http://www.linkedin.com/in/david-rosinski-379365135"><img class="connect_image" src="images/icons/linkedin-sign(1).png"></a>
-      <a href="https://github.com/megofast"><img class="connect_image" src="images/icons/github-sign(1).png"></a>
+      <a href="http://www.linkedin.com/in/david-rosinski-379365135"><img class="connect_image" src="images/icons/linkedin-sign(1).png" alt="LinkedIn"></a>
+      <a href="https://github.com/megofast"><img class="connect_image" src="images/icons/github-sign(1).png" alt="GitHub"></a>
     </div>
     <div class="left_footer_container">
       <div class="footer_links">
@@ -55,7 +55,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
-      <div class="copy">&copy copyright 2018 By David Rosinski</div>
+      <div class="copy">&copy; copyright 2018 By David Rosinski</div>
       <div class="credit">Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </div>
   </footer>
