--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header>
     <nav>
       <ul>
-        <li><div class="logo"><p>dr</p></div></li>
-        <li><h1 class="header_title">David Rosinski</h1><h5 class="header_subtitle">Full Stack Web Developer</h5></li>
+        <li><div class="title_container"><div class="logo"><p>dr</p></div>
+        <div class="title_text"><h1 class="header_title">David Rosinski</h1><h5 class="header_subtitle">Full Stack Web Developer</h5></div></div></li>
         <li><a class="active" href="#"><img class="link_icons" src="images/icons/home.png" alt="Home">Home</a></li>
         <li><a href="#"><img class="link_icons" src="images/icons/briefcase.png" alt="Projects">Projects</a></li>
         <li><a href="#"><img class="link_icons" src="images/icons/user-shape.png" alt="About">About</a></li>
